# patchguard

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  RELEASE.md  pyproject.toml
.github/workflows/: ci.yml  full-docker-e2e.yml
docs/: design.md  invariants.md  progress.md  threat-model.md
examples/: demo.sh
examples/demo-repo/: hello.py
examples/demo-repo/tests/: test_hello.py
src/agentfence/: cli.py
src/agentfence/analysis/: quality_score.py
src/agentfence/core/: orchestrator.py
src/agentfence/models/: enums.py  events.py  manifest.py
src/agentfence/replay/: service.py
src/agentfence/reporting/: generator.py
src/agentfence/workspace/: fingerprint.py
src/patchguard/: __init__.py  cli.py  constants.py  exceptions.py
src/patchguard/adapters/: base.py  claude_code.py  command.py
src/patchguard/analysis/: compare.py  diff_metrics.py  quality_score.py  trajectory_metrics.py
src/patchguard/artifacts/: integrity.py  serializer.py  store.py
src/patchguard/core/: lifecycle.py  orchestrator.py  run_context.py
src/patchguard/models/: enums.py  events.py  manifest.py
tests/e2e/: test_run_pipeline.py
tests/fixtures/: agent_failure.py  agent_success.py  agent_timeout.py
tests/integration/: test_docker.py  test_workspace.py
tests/unit/: test_adapter.py  test_artifact_store.py  test_claude_code_adapter.py  test_cli.py  test_command_builder.py  test_fingerprint.py  test_git_client.py  test_metrics.py  test_models.py  test_orchestrator.py  test_policy.py  test_replay.py  test_resource_monitor.py  test_run_context.py
(+18 files in other folders)
